[tool.poetry]
name = "python-Search Bar"
version = "0.1.0"
description = ""
authors = ["Jackson <jacksonderryberry@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
TSB Code= "^0.01.0 Bata"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"